# invoice2ips

./: .gitignore  ANTIGRAVITY.md  README.md  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: tauri.ts
