[package]
name = "invoice2ips"
version = "0.0.0"
description = "A mobile-optimized PWA to scan invoices and generate NBS IPS QR codes for instant payments in Serbia."
authors = ["you <you@example.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true # Compile time improvements

[profile.release]
panic = "abort" # Strip expensive panic hook
codegen-units = 1 # Better optimizations
lto = true # Link time optimizations
opt-level = "s" # Optimize for size
strip = true # Strip symbols from binary
